formats/V4.1-rc1/lehd_csv_naming.asciidoc
= LEHD Public Use CSV Naming Schema V4.1-rc1 - CSV Naming Convention
Lars Vilhuber <ces.qwi.feedback@census.gov>
08 August 2016
// a2x: --dblatex-opts "-P latex.output.revhistory=0 --param toc.section.depth=3"

( link:lehd_csv_naming.pdf[Printable version] )



[IMPORTANT]
.Important
==============================================
This specification is draft. Feedback is welcome. Please write us at link:mailto:ces.qwi.feedback@census.gov?subject=LEHD_Schema_draft[ces.qwi.feedback@census.gov].
==============================================
	

Purpose
-------
The public-use data from the Longitudinal Employer-Household Dynamics Program, including the Quarterly Workforce Indicators (QWI)
and Job-to-Job Flows (J2J), are available for download with the following data schema.
These data are available as Comma-Separated Value (CSV) files through the LEHD website’s Data page at
http://lehd.ces.census.gov/data/ and through LED Extraction Tool at http://ledextract.ces.census.gov/.

This document describes the file naming schema for LEHD-provided CSV files. 

Schema for Data File Contents
-----------------------------

The contents (schema) are described in  link:lehd_public_use_schema.html[].

Extends
-------
This version reimplements some features from  V4.0. Many files compliant with LEHD or QWI Schema v4.0 will also be compliant with this schema, but compatibility is not guaranteed.

Supersedes
----------
This version supersedes V4.0.5, for files released as of RXXXX.


Basic Schema
------------

All files are preceded by a file type definition, followed by additional information on the aggregation level of the file, or
some other identifier.

-------------------
[TYPE]_[DETAILS].[EXT]
-------------------

( link:naming_convention.csv[] )


[width="90%",format="csv",delim=",",cols="^1,<3,<5",options="header"]
|===================================================
include::tmp_naming_convention.csv[]
|===================================================

=== QWIPU from the LED Extraction Tool
Files downloaded through the  LED Extraction Tool at http://ledextract.ces.census.gov/ follow the following naming convention:
------------------------------------
[type]_[id].[EXT]
------------------------------------
where +[id]+ is the Request ID (a unique string of characters) generated every time Submit Request'' is clicked. The ID references each query submission made to the database.

=== Other files
Files downloaded from the LEHD website at http://lehd.ces.census.gov/data follow the following naming convention:
--------------------------------
[type]_[geohi]_[demo]_[fas]_[geocat]_[indcat]_[ownercat]_[sa].[EXT]
--------------------------------
where each component is described in more detail below. Schema files detailing legal values for each component can be downloaded from this website.



== Description of Filename Components

=== Types

( link:naming_type.csv[] )

[width="90%",format="csv",delim=";",cols="^1,<3,<5,<3",options="header"]
|===================================================
include::naming_type.csv[]
|===================================================

=== geohi
( link:naming_geohi.csv[] )

This component is based on the alphabetic FIPS state code equivalent to the numeric FIPS code in link:label_fipsnum.csv[], based on https://catalog.data.gov/dataset/fips-state-codes[FIPS PUB 5-2]. It is expanded to encompass additional codes denoting national coverage, or a collection of states.

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
type,Description
all,Collection of all available states
us,National data (50 states + DC)
st,Any legal 2-character state postal code (see link:naming_geohi.csv[] )
|===================================================

=== demo
( link:naming_demo.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::naming_demo.csv[]
|===================================================

<<<


=== fas
( link:naming_fas.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::naming_fas.csv[]
|===================================================

<<<


=== geocat
( link:naming_geocat.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::naming_geocat.csv[]
|===================================================

<<<


=== indcat
( link:naming_indcat.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::naming_indcat.csv[]
|===================================================

<<<


=== owncat
( link:naming_owncat.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::naming_owncat.csv[]
|===================================================

<<<


=== sa
( link:naming_sa.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::naming_sa.csv[]
|===================================================

<<<


=== ext
( link:naming_ext.csv[] )

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::naming_ext.csv[]
|===================================================

<<<


== [[changes]] Changes
For a description of how schema files are versioned, see link:../VERSIONING{ext-relative}[main directory].

=== This version (revisions)
- 2016-08-08: Initial release

=== Version 4.1-rc1 from 4.0.5
- 2016-08-08: Implemented select changes from V4.1d-draft: Key changes are
  - Changed structure of state-level geography labels (flat directory structure) e5dbe97
  - Describes National QWI files and J2J files (both of which are still in beta), added J2J, National QWI spec
  - added additional geo_level for CBSA (complete), additional description, sources in label_geo_level.csv 1eb399f,27a2674

==== In more detail
  - added geohi category of ALL, US, add naming_geohi.csv 89617e3
  - added naming convention for additional files
  - added agg_level variable 89617e3, 2149623
  - Changes to name of variable schema files (qwipu -> qwi), addition of variability and rate variable schema files. 89617e3
  - Addition of a column identifying the type of variable on QWI 89617e3
  - Renamed file from QWIPU_Data_Schema.pdf to lehd_public_use_schema.pdf 89617e3
  - Addition of variable schema description for J2J 1a57250
  - Added a extension component [ext] to the file naming convention to reflect availability of Excel files (and PDF files) d9f8387 f7cc524
  - Updated documentation-generating scripts to the latest. Documents are now identified by date, not revision 8136f0c
  - Added a concatenation of geography files as label_geography.csv. 8136f0c, 39ecfc9
  - Added a column geo_level to all label_geography_* files a32bb4c
  - Changed fipsnum to force readin of FIPS as character, include geo_level, US.  a32bb4c
  - Added additional legal values for firmage and firmsize, as used by J2J a32bb4c
  - Added Federal government to files  (for National QWI) 942dd0a, 1654288
  - Clarified description of filenaming components 8888529, 8d580f6
  - Sundry small additional changes, building out the schema

For additional details, please consult the previous draft versions:

- link:../V4.1-draft[../V4.1-draft]
- link:../V4.1b-draft[../V4.1b-draft]
- link:../V4.1c-draft[../V4.1c-draft]
- link:../V4.1d-draft[../V4.1d-draft]

[IMPORTANT]
.Important
==============================================
Some of the data products noted above do not exist yet.
==============================================

<<<
*******************
This revision: Mon Aug  8 18:04:53 EDT 2016
*******************

